--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,14 @@
-absl-py==0.7.1
-astor==0.7.1
-certifi==2019.3.9
-chardet==3.0.4
-Click==7.0
-dominate==2.3.5
-Flask==1.0.2
-Flask-Bootstrap==3.3.7.1
-Flask-WTF==0.14.2
-gast==0.2.2
-gevent==1.4.0
-greenlet==0.4.15
-grpcio==1.19.0
-gunicorn==19.9.0
-h5py==2.9.0
-idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.11.3
-Keras==2.2.4
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
-Markdown==3.1
-MarkupSafe==1.1.1
-mock==2.0.0
-numpy==1.22.0
-pbr==5.1.3
-Pillow==9.0.1
-protobuf==3.15.0
-PyYAML==5.4
-requests==2.21.0
-scipy==1.2.1
-six==1.12.0
-tensorboard==1.12.2
-tensorflow-estimator==1.13.0
-tensorflow==2.7.2
-termcolor==1.1.0
-urllib3==1.26.5
-visitor==0.1.3
-Werkzeug==0.15.3
-WTForms==2.2.1
+asgiref==3.5.0
+Django==3.2
+joblib==1.1.0
+numpy==1.21.5
+pandas==1.1.5
+python-dateutil==2.8.2
+python-dotenv==0.19.0
+pytz==2021.3
+scikit-learn==0.24.2
+scipy==1.7.3
+six==1.16.0
+sqlparse==0.4.2
+threadpoolctl==3.1.0
+typing_extensions==4.0.1
